(apps/no_solver) Move tikz plotting to visclaw; change option name to clawpatch-version, not clawpack version

--- a/applications/no_solver/fclaw_options.ini
+++ b/applications/no_solver/fclaw_options.ini
@@ -1,11 +1,10 @@
 [user]
-     claw-version = 0
-
-
+     example = 0             # not really used
+     clawpatch_version = 4   # determines data layout for patches
 
 [clawpatch]
-     mx = 32               # mx_leaf
-     my = 32             # my_leaf
+     mx = 32              # mx_leaf
+     my = 32              # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 0
 
@@ -19,13 +18,13 @@
      # Dynamic gridding parameters     
      # ---------------------------
      minlevel = 1
-     maxlevel = 4
+     maxlevel = 6
      regrid_interval = 1
 
      refine_threshold = 0.25
      coarsen_threshold = 0.05
-     smooth-refine = F
-     smooth-level = 6
+     smooth-refine = T
+     smooth-level = 5
 
      # --------------
      # Time stepping
@@ -67,7 +66,7 @@
      tikz-plot-suffix = 'png'
 
      # To keep constant DPI, increase figisize as maxlevel is increased.
-     tikz-figsize = 4 4   
+     tikz-figsize = 16 16
 
 
      # mapping
