(clawpack/filament) Updating Makefile

--- a/applications/clawpack/advection/2d/filament/Makefile.am
+++ b/applications/clawpack/advection/2d/filament/Makefile.am
@@ -2,7 +2,6 @@
 
 bin_PROGRAMS += applications/clawpack/advection/2d/filament/filament
 
-
 applications_clawpack_advection_2d_filament_filament_SOURCES = \
 	applications/clawpack/advection/2d/filament/filament_user.cpp \
 	applications/clawpack/advection/2d/filament/filament_user.h \
@@ -31,21 +30,19 @@ applications_clawpack_advection_2d_filament_filament_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack5_rpt2adv_manifold.f90
 
-ADVECTION_ALL_CPPFLAGS = -I../all/
-
-
 applications_clawpack_advection_2d_filament_filament_CPPFLAGS = \
-		$(ADVECTION_ALL_CPPFLAGS)\
         $(AM_CPPFLAGS) \
         $(FCLAW_CLAWPACK46_CPPFLAGS) \
-        $(FCLAW_CLAWPACK5_CPPFLAGS)
+        $(FCLAW_CLAWPACK5_CPPFLAGS) \
+        $(FCLAW_CLAWPATCH_CPPFLAGS)
 	    
 
 # applications_clawpack_advection_2d_filament_filament_CPPFLAGS += -D MPI_DEBUG
 
 
 applications_clawpack_advection_2d_filament_filament_LDADD = \
+        $(LDADD) \
         $(FCLAW_CLAWPACK46_LDADD) \
-        $(FCLAW_CLAWPACK5_LDADD)  \
-	    $(FCLAW_CLAWPATCH_LDADD)  \
-	    $(LDADD)
+        $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CLAWPATCH_LDADD) \
+        $(FCLAW_LDADD)
