--- a/applications/clawpack/advection/2d/replicated/Makefile.am
+++ b/applications/clawpack/advection/2d/replicated/Makefile.am
@@ -9,6 +9,7 @@ applications_clawpack_advection_2d_replicated_replicated_SOURCES = \
 	applications/clawpack/advection/2d/replicated/fdisc.f \
 	applications/clawpack/advection/2d/replicated/user_4.6/qinit.f \
 	applications/clawpack/advection/2d/replicated/user_5.0/qinit.f90 \
+    applications/clawpack/advection/2d/all/advection_user_fort.h \
 	applications/clawpack/advection/2d/all/clawpack46_rpn2adv.f \
 	applications/clawpack/advection/2d/all/clawpack46_rpt2adv.f \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv.f90 \
@@ -17,10 +18,15 @@ applications_clawpack_advection_2d_replicated_replicated_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack5_setaux.f90
 
 applications_clawpack_advection_2d_replicated_replicated_CPPFLAGS = \
-        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
+        $(AM_CPPFLAGS)  \
+        $(FCLAW_CLAWPACK46_CPPFLAGS)  \
+        $(FCLAW_CLAWPACK5_CPPFLAGS) \
+        $(FCLAW_CLAWPATCH_CPPFLAGS)
 
 applications_clawpack_advection_2d_replicated_replicated_LDADD = \
         $(FCLAW_CLAWPACK46_LDADD) \
         $(FCLAW_CLAWPACK5_LDADD) \
         $(FCLAW_CLAWPATCH_LDADD) \
-        $(LDADD)
+        $(LDADD) \
+        $(FCLAW_LDADD)
+
