(scripts,replicated) More work on plots for replicated problem

--- a/applications/clawpack/advection/2d/replicated/ex_00004.ini
+++ b/applications/clawpack/advection/2d/replicated/ex_00004.ini
@@ -66,6 +66,13 @@
      manifold = F         # Manifold
 
 
+# Options 
+# 
+#    mi,mj,ax,ay,bx,by,periodic_x,periodic_y 
+# 
+# are set in main program
+
+
 # -----------------------------------------------------------
 # Package options
 # -----------------------------------------------------------
