--- a/applications/clawpack/advection/2d/replicated/ex_00001.ini
+++ b/applications/clawpack/advection/2d/replicated/ex_00001.ini
@@ -63,8 +63,12 @@
 # Mapping options
      manifold = F         # Manifold
 
-# More options (mi,mj,ax,ay,bx,by,periodic_x,periodic_y) are set
-# set in option processing step     
+# Options 
+# 
+#    mi,mj,ax,ay,bx,by,periodic_x,periodic_y 
+# 
+# are set in main program
+
 
 # -----------------------------------------------------------
 # Package options
