--- a/applications/clawpack/advection/2d/replicated/Makefile.am
+++ b/applications/clawpack/advection/2d/replicated/Makefile.am
@@ -1,7 +1,8 @@
 bin_PROGRAMS += applications/clawpack/advection/2d/replicated/replicated
 
 applications_clawpack_advection_2d_replicated_replicated_SOURCES = \
-	applications/clawpack/advection/2d/replicated/replicated.cpp \
+	applications/clawpack/advection/2d/replicated/fclaw_options.ini \
+	applications/clawpack/advection/2d/replicated/regression.ini \
 	applications/clawpack/advection/2d/replicated/replicated_user.h \
     applications/clawpack/advection/2d/replicated/replicated_options.c \
 	applications/clawpack/advection/2d/replicated/replicated_user.cpp \
