--- a/applications/clawpack/advection/2d/swirl/Makefile.am
+++ b/applications/clawpack/advection/2d/swirl/Makefile.am
@@ -3,6 +3,8 @@
 bin_PROGRAMS += applications/clawpack/advection/2d/swirl/swirl
 
 applications_clawpack_advection_2d_swirl_swirl_SOURCES = \
+	applications/clawpack/advection/2d/swirl/fclaw_options.ini \
+	applications/clawpack/advection/2d/swirl/regression.ini \
 	applications/clawpack/advection/2d/swirl/swirl_user.cpp \
 	applications/clawpack/advection/2d/swirl/swirl_user.h \
 	applications/clawpack/advection/2d/swirl/swirl.cpp \
@@ -28,6 +30,7 @@ applications_clawpack_advection_2d_swirl_swirl_CPPFLAGS = \
         $(FCLAW_CLAWPACK46_CPPFLAGS) \
         $(FCLAW_CLAWPACK5_CPPFLAGS) \
         $(FCLAW_CLAWPATCH_CPPFLAGS)
+
 
 applications_clawpack_advection_2d_swirl_swirl_LDADD = \
         $(LDADD) \
