--- a/applications/clawpack/advection/2d/latlong/Makefile.am
+++ b/applications/clawpack/advection/2d/latlong/Makefile.am
@@ -2,8 +2,6 @@ bin_PROGRAMS += applications/clawpack/advection/2d/latlong/latlong
 
 
 applications_clawpack_advection_2d_latlong_latlong_SOURCES = \
-	applications/clawpack/advection/2d/latlong/fclaw_options.ini \
-	applications/clawpack/advection/2d/latlong/regression.ini \
 	applications/clawpack/advection/2d/latlong/latlong.cpp \
 	applications/clawpack/advection/2d/latlong/latlong_user.h \
 	applications/clawpack/advection/2d/latlong/latlong_user.cpp \
@@ -19,6 +17,12 @@ applications_clawpack_advection_2d_latlong_latlong_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack46_rpt2adv_manifold.f \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack5_rpt2adv_manifold.f90
+
+inifiles := \
+	applications/clawpack/advection/2d/latlong/fclaw_options.ini \
+	applications/clawpack/advection/2d/latlong/regression.ini
+
+applications_clawpack_advection_2d_latlong_latlong_SOURCES += $(inifiles)
 
 applications_clawpack_advection_2d_latlong_latlong_CPPFLAGS = \
 	$(AM_CPPFLAGS) \
