--- a/applications/clawpack/advection/2d/annulus/Makefile.am
+++ b/applications/clawpack/advection/2d/annulus/Makefile.am
@@ -2,8 +2,6 @@ bin_PROGRAMS += applications/clawpack/advection/2d/annulus/annulus
 
 
 applications_clawpack_advection_2d_annulus_annulus_SOURCES = \
-	applications/clawpack/advection/2d/annulus/fclaw_options.ini \
-	applications/clawpack/advection/2d/annulus/regression.ini \
 	applications/clawpack/advection/2d/annulus/annulus.cpp \
 	applications/clawpack/advection/2d/annulus/annulus_user.h \
 	applications/clawpack/advection/2d/annulus/annulus_user.cpp \
@@ -19,6 +17,14 @@ applications_clawpack_advection_2d_annulus_annulus_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack46_rpt2adv_manifold.f \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack5_rpt2adv_manifold.f90
+
+inifiles :=	\
+	applications/clawpack/advection/2d/annulus/fclaw_options.ini \
+	applications/clawpack/advection/2d/annulus/regression.ini
+
+applications_clawpack_advection_2d_annulus_annulus_SOURCES += $(inifiles)
+
+
 
 applications_clawpack_advection_2d_annulus_annulus_CPPFLAGS = \
         $(AM_CPPFLAGS) \
