--- a/applications/clawpack/advection/2d/replicated/Makefile.am
+++ b/applications/clawpack/advection/2d/replicated/Makefile.am
@@ -18,12 +18,12 @@ applications_clawpack_advection_2d_replicated_replicated_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack46_setaux.f \
 	applications/clawpack/advection/2d/all/clawpack5_setaux.f90
 
-inifiles := \
+replicated_inifiles = \
 	applications/clawpack/advection/2d/replicated/fclaw_options.ini \
 	applications/clawpack/advection/2d/replicated/regression.ini
 
 # Is there a better way to do this? 
-applications_clawpack_advection_2d_replicated_replicated_SOURCES += $(inifiles)
+applications_clawpack_advection_2d_replicated_replicated_SOURCES += $(replicated_inifiles)
 
 applications_clawpack_advection_2d_replicated_replicated_CPPFLAGS = \
         $(AM_CPPFLAGS)  \
