--- a/applications/clawpack/advection/2d/annulus/Makefile.am
+++ b/applications/clawpack/advection/2d/annulus/Makefile.am
@@ -18,11 +18,11 @@ applications_clawpack_advection_2d_annulus_annulus_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack5_rpt2adv_manifold.f90
 
-inifiles :=	\
+annulus_inifiles =	\
 	applications/clawpack/advection/2d/annulus/fclaw_options.ini \
 	applications/clawpack/advection/2d/annulus/regression.ini
 
-applications_clawpack_advection_2d_annulus_annulus_SOURCES += $(inifiles)
+applications_clawpack_advection_2d_annulus_annulus_SOURCES += $(annulus_inifiles)
 
 
 
