--- a/applications/clawpack/advection/2d/disk/Makefile.am
+++ b/applications/clawpack/advection/2d/disk/Makefile.am
@@ -25,11 +25,11 @@ applications_clawpack_advection_2d_disk_disk_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack5_rpt2adv_manifold.f90
 
-inifiles := \
+disk_inifiles = \
 	applications/clawpack/advection/2d/disk/fclaw_options.ini \
 	applications/clawpack/advection/2d/disk/regression.ini
 
-applications_clawpack_advection_2d_disk_disk_SOURCES += $(inifiles)
+applications_clawpack_advection_2d_disk_disk_SOURCES += $(disk_inifiles)
 
 
 
