--- a/applications/clawpack/advection/2d/swirl/Makefile.am
+++ b/applications/clawpack/advection/2d/swirl/Makefile.am
@@ -20,11 +20,11 @@ applications_clawpack_advection_2d_swirl_swirl_SOURCES = \
 	applications/clawpack/advection/2d/swirl/user_5.0/qinit.f90 \
 	applications/clawpack/advection/2d/swirl/user_5.0/b4step2.f90
 
-inifiles :=	\
+swirl_inifiles =	\
 	applications/clawpack/advection/2d/swirl/fclaw_options.ini \
 	applications/clawpack/advection/2d/swirl/regression.ini 
 
-applications_clawpack_advection_2d_swirl_swirl_SOURCES += $(inifiles)
+applications_clawpack_advection_2d_swirl_swirl_SOURCES += $(swirl_inifiles)
 
 
 ## Include headers and libraries needed to build this application
