--- a/applications/clawpack/transport/gaussian/Makefile.am
+++ b/applications/clawpack/transport/gaussian/Makefile.am
@@ -2,8 +2,6 @@
 
 bin_PROGRAMS += applications/clawpack/transport/gaussian/gaussian
 
-include_HEADERS += applications/clawpack/transport/gaussian/gaussian_user.h
-
 applications_clawpack_transport_gaussian_gaussian_SOURCES = \
 	applications/clawpack/transport/gaussian/gaussian.cpp \
 	applications/clawpack/transport/gaussian/gaussian_user.cpp \
@@ -16,9 +14,7 @@ applications_clawpack_transport_gaussian_gaussian_SOURCES = \
 	applications/clawpack/transport/gaussian/user_5.0/tag4coarsening.f \
 	applications/clawpack/transport/all/velocity_wind.f \
 	applications/clawpack/transport/all/gaussian.f \
-	applications/clawpack/transport/all/transport_user.h \
 	applications/clawpack/transport/all/transport_user.cpp \
-	applications/clawpack/transport/all/transport_options.h \
 	applications/clawpack/transport/all/transport_domain.c \
 	applications/clawpack/transport/all/transport_options.c \
 	applications/clawpack/transport/all/user46_b4step2_manifold.f \
@@ -32,17 +28,30 @@ applications_clawpack_transport_gaussian_gaussian_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack5_rpt2adv_manifold.f90
 
-GAUSSIAN_CPPFLAGS = -I@top_srcdir@/applications/clawpack/transport/all
+gaussian_headers = \
+	applications/clawpack/advection/2d/all/advection_user_fort.h \
+	applications/clawpack/transport/gaussian/gaussian_user.h \
+	applications/clawpack/transport/all/transport_user.h \
+	applications/clawpack/transport/all/transport_options.h
 
+gaussian_inifiles = \
+	applications/clawpack/transport/gaussian/fclaw_options.ini \
+	applications/clawpack/transport/gaussian/regression.ini 
+
+# Is this the best way to include these?
+applications_clawpack_transport_gaussian_gaussian_SOURCES += \
+	$(gaussian_inifiles) \
+	$(gaussian_headers)
 
 applications_clawpack_transport_gaussian_gaussian_CPPFLAGS = \
-		$(GAUSSIAN_CPPFLAGS) \
         $(AM_CPPFLAGS) \
         $(FCLAW_CLAWPACK46_CPPFLAGS) \
-        $(FCLAW_CLAWPACK5_CPPFLAGS)
+        $(FCLAW_CLAWPACK5_CPPFLAGS) \
+        $(FCLAW_CLAWPATCH_CPPFLAGS)
 
 applications_clawpack_transport_gaussian_gaussian_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) \
+	    $(LDADD) \
+	    $(FCLAW_CLAWPACK46_LDADD) \
         $(FCLAW_CLAWPACK5_LDADD) \
         $(FCLAW_CLAWPATCH_LDADD) \
-	    $(LDADD) 
+	    $(FCLAW_LDADD)
