--- a/applications/clawpack/advection/2d/swirl_cons/example0.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example0.ini
@@ -21,7 +21,7 @@
      # ---------------------------
 
      minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     maxlevel = 3         # Maximum levels of refinement
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 1
@@ -40,14 +40,14 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # OutputStyle = 1,2,3
+     outstyle = 3         # OutputStyle = 1,2,3
 
-     nout  = 10          # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
+     nout  = 10         # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
      nstep = 1           # Only used if outstyle is 3
 
 
-     subcycle = T         # subcycle in time ( = T or F).
-     outstyle-uses-maxlevel = F
+     subcycle = F         # subcycle in time ( = T or F).
+     outstyle-uses-maxlevel = T
 
      # -------------------
      # File and console IO
