--- a/applications/clawpack/advection/2d/disk/Makefile.am
+++ b/applications/clawpack/advection/2d/disk/Makefile.am
@@ -29,7 +29,17 @@ disk_inifiles = \
 	applications/clawpack/advection/2d/disk/fclaw_options.ini \
 	applications/clawpack/advection/2d/disk/regression.ini
 
-applications_clawpack_advection_2d_disk_disk_SOURCES += $(disk_inifiles)
+disk_graphics = \
+	applications/clawpack/advection/2d/disk/afterframe.m \
+	applications/clawpack/advection/2d/disk/setplot2.m \
+	applications/clawpack/advection/2d/disk/mapc2m.m \
+	applications/clawpack/advection/2d/disk/filament_soln.m \
+	applications/clawpack/advection/2d/disk/create_filament_soln_tikz.m
+
+
+applications_clawpack_advection_2d_disk_disk_SOURCES += \
+	$(disk_inifiles) \
+	$(disk_graphics)
 
 
 
