(clawpack/advection/2d) Still working on getting extra files into distribution

--- a/applications/clawpack/advection/2d/annulus/Makefile.am
+++ b/applications/clawpack/advection/2d/annulus/Makefile.am
@@ -18,7 +18,7 @@ applications_clawpack_advection_2d_annulus_annulus_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack5_rpt2adv_manifold.f90
 
-applications_clawpack_advection_2d_annulus_annulus_EXTRA_DIST = \
+EXTRA_DIST += \
 	applications/clawpack/advection/2d/annulus/fclaw_options.ini \
 	applications/clawpack/advection/2d/annulus/regression.ini \
 	applications/clawpack/advection/2d/annulus/afterframe.m \
