--- a/applications/clawpack/advection/2d/filament/Makefile.am
+++ b/applications/clawpack/advection/2d/filament/Makefile.am
@@ -30,7 +30,7 @@ applications_clawpack_advection_2d_filament_filament_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack5_rpt2adv_manifold.f90
 
-applications_clawpack_advection_2d_filament_filament_EXTRA_DIST = \
+EXTRA_DIST += \
 	applications/clawpack/advection/2d/filament/fclaw_options.ini \
 	applications/clawpack/advection/2d/filament/regression.ini \
 	applications/clawpack/advection/2d/filament/afterframe.m \
