--- a/applications/clawpack/advection/2d/replicated/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/replicated/fclaw_options.ini
@@ -2,11 +2,10 @@
 # A periodic example that uses [ax,bx]x[ay,by]
 # -----------------------------------------------------------
 [user]
-     example = 1
+     example = 1           # example=0 - single block; example=1 - multiblock
      claw-version = 4
-     replicate-factor = -1  # Set to -1 to use --mi, --mj (below)
-
-
+     minlevel-base = 4     
+     maxlevel-base = 7
 
 # -----------------------------------------------------------
 # Basic ForestClaw options
