(geoclaw/bowl_radial) Update Python to 3.0; use new gauge capabilities

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -4,7 +4,7 @@
 [clawpatch]
      # Grid dimensions
      mx = 8               # mx_leaf
-     my = 8              # my_leaf
+     my = 8               # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 1
 
@@ -41,7 +41,7 @@
      weighted_partition = T
 
 # File and console IO
-     verbosity = production     # verbose
+     verbosity = essential     # verbose
      output = T
 
 # Diagnostics and debugging
@@ -81,4 +81,7 @@
 
      # Output
      ascii-out = T
+
+     # Number of lines in gauge file to store before printing
+     gauge-print-buffer-length = 100   
 
