(geoclaw/radial_bowl) Udpate .ini file

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -82,6 +82,6 @@
      # Output
      ascii-out = T
 
-     # Number of lines in gauge file to store before printing
-     gauge-print-buffer-length = 100   
+     # Number of lines in gauge file to store in memory before printing
+     gauge-buffer-length = 100
 
