(clawpack/advecton) Update virtual tables to include gauges

--- a/applications/clawpack/advection/2d/disk/Makefile.am
+++ b/applications/clawpack/advection/2d/disk/Makefile.am
@@ -4,9 +4,10 @@ bin_PROGRAMS += applications/clawpack/advection/2d/disk/disk
 
 
 applications_clawpack_advection_2d_disk_disk_SOURCES = \
+	applications/clawpack/advection/2d/disk/disk.cpp \
+	applications/clawpack/advection/2d/disk/disk_options.c \
 	applications/clawpack/advection/2d/disk/disk_user.cpp \
 	applications/clawpack/advection/2d/disk/disk_user.h \
-	applications/clawpack/advection/2d/disk/disk.cpp \
 	applications/clawpack/advection/2d/disk/fclaw2d_map_pillowdisk.c \
 	applications/clawpack/advection/2d/disk/fclaw2d_map_pillowdisk5.c \
 	applications/clawpack/advection/2d/disk/psi.f \
