--- a/applications/clawpack/advection/2d/latlong/Makefile.am
+++ b/applications/clawpack/advection/2d/latlong/Makefile.am
@@ -3,6 +3,7 @@ bin_PROGRAMS += applications/clawpack/advection/2d/latlong/latlong
 
 applications_clawpack_advection_2d_latlong_latlong_SOURCES = \
 	applications/clawpack/advection/2d/latlong/latlong.cpp \
+	applications/clawpack/advection/2d/latlong/latlong_options.c \
 	applications/clawpack/advection/2d/latlong/latlong_user.h \
 	applications/clawpack/advection/2d/latlong/latlong_user.cpp \
 	applications/clawpack/advection/2d/latlong/fclaw2d_map_latlong.c \
