--- a/applications/clawpack/advection/2d/sphere/Makefile.am
+++ b/applications/clawpack/advection/2d/sphere/Makefile.am
@@ -2,9 +2,10 @@ bin_PROGRAMS += applications/clawpack/advection/2d/sphere/sphere
 
 
 applications_clawpack_advection_2d_sphere_sphere_SOURCES = \
+	applications/clawpack/advection/2d/sphere/sphere.cpp \
 	applications/clawpack/advection/2d/sphere/sphere_user.cpp \
 	applications/clawpack/advection/2d/sphere/sphere_user.h \
-	applications/clawpack/advection/2d/sphere/sphere.cpp \
+	applications/clawpack/advection/2d/sphere/sphere_options.c \
 	applications/clawpack/advection/2d/sphere/fclaw2d_map_cubedsphere.c \
 	applications/clawpack/advection/2d/sphere/fclaw2d_map_pillowsphere.c \
 	applications/clawpack/advection/2d/sphere/psi.f \
