--- a/applications/clawpack/advection/2d/annulus/Makefile.am
+++ b/applications/clawpack/advection/2d/annulus/Makefile.am
@@ -3,6 +3,7 @@ bin_PROGRAMS += applications/clawpack/advection/2d/annulus/annulus
 
 applications_clawpack_advection_2d_annulus_annulus_SOURCES = \
 	applications/clawpack/advection/2d/annulus/annulus.cpp \
+	applications/clawpack/advection/2d/annulus/annulus_options.c \
 	applications/clawpack/advection/2d/annulus/annulus_user.h \
 	applications/clawpack/advection/2d/annulus/annulus_user.cpp \
 	applications/clawpack/advection/2d/annulus/fclaw2d_map_annulus.c \
