--- a/applications/clawpack/euler/2d/shockbubble/regression.ini
+++ b/applications/clawpack/euler/2d/shockbubble/regression.ini
@@ -22,7 +22,7 @@
 
 # Regridding information
      minlevel = 0               # Minimum level
-     maxlevel = 4               # Maximum levels of refinement
+     maxlevel = 3               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
      coarsen_threshold = 0.2
@@ -47,7 +47,7 @@
 
 
 # File and console IO
-     verbosity = production      # verbosity
+     verbosity = essential      # verbosity
      output = F                 # 
      
 # Debugging and diagnostics
@@ -56,11 +56,12 @@
      run-user-diagnostics = F
      conservation-check = F
      report-timing = T
+     report-timing-verbosity=counters
 
      # -----------
      # Tikz output 
      # -----------
-     tikz-out = T
+     tikz-out = F
      tikz-figsize = 4 1     # Each block is 1 in x 1 in ; Final figure is 4 in x 1 in
      tikz-plot-fig = T      # Set to true if you have figure 'plot_0000.png' available.
      tikz-plot-prefix = 'plot'
