(geoclaw) Update virtual table initialization

--- a/applications/geoclaw/bowl_slosh/Makefile.am
+++ b/applications/geoclaw/bowl_slosh/Makefile.am
@@ -6,6 +6,7 @@ applications_geoclaw_bowl_slosh_slosh_SOURCES = \
 	applications/geoclaw/bowl_slosh/slosh_user.cpp \
 	applications/geoclaw/bowl_slosh/slosh_user.h \
 	applications/geoclaw/bowl_slosh/slosh.cpp \
+	applications/geoclaw/bowl_slosh/slosh_options.c \
 	applications/geoclaw/bowl_slosh/qinit.f90
 
 EXTRA_DIST += \
