(applications) Tweaking regression.ini files

--- a/applications/clawpack/euler/2d/shockbubble/regression.ini
+++ b/applications/clawpack/euler/2d/shockbubble/regression.ini
@@ -10,7 +10,7 @@
 
 [clawpatch]
      # Grid dimensions
-     mx = 16               
+     mx = 16              
      my = 16               
      mbc = 2       # Number of ghost cells
      maux = 1
@@ -35,7 +35,7 @@
      #initial_dt = 2.5e-3    # Initial time step for 'minlevel'
      initial_dt = 2.5e-3    # Initial time step for 'minlevel'
 
-     use_fixed_dt = T            # Take a fixed time step
+     use_fixed_dt = F            # Take a fixed time step
      max_cfl = 1.0
      desired_cfl = 0.9
 
