--- a/applications/geoclaw/bowl_slosh/regression.ini
+++ b/applications/geoclaw/bowl_slosh/regression.ini
@@ -48,7 +48,7 @@
     mpi_debug = F        # Attach mpi processes in gdb
     conservation-check = F
     run-user-diagnostics = T
-    report-timing-verbosity=summary
+    report-timing-verbosity = counters
 
 
 # Mapping
