--- a/applications/geoclaw/bowl_radial/regression.ini
+++ b/applications/geoclaw/bowl_radial/regression.ini
@@ -50,7 +50,7 @@
     conservation-check = F
     run-user-diagnostics = T
     report-timing = T
-    report-timing-verbosity = exclusive
+    report-timing-verbosity = counters
 
 # Mapping
     manifold = F         # Manifold
